# ast-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW-TO-USE.md  INSTALL.md  LICENSE  README.md  SECURITY.md  VIBE-CODING.md  dependency_analysis_report.md  plugin.json  pyproject.toml  test_absolute_path.json  test_calls.json  test_code.py  test_functions.json
.cursor/: mcp.json
.cursor/rules/: clean-code.mdc
.github/: CODEOWNERS  README.md  branch-protection-rules.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  manual-test.yml  release.yml  security.yml  test.yml
.reporepo/ast/: .gitignore  README.md  call-graph-base.json  function-definitions.json
.reporepo/ast/rules/: example-rule.yml  go-empty-if-err.yml.yml  go-error-handling.yml.yml  go-nil-check.yml.yml  go-unused-var.yml.yml  js-missing-semicolon.yml  js-no-console-log.yml  js-no-function-in-block.yml  js-no-unused-vars.yml  js-no-var.yml  js-use-strict-equality.yml  python-no-bare-except.yml  python-no-deprecated-assert.yml  python-no-mutable-defaults.yml  python-no-percent-formatting.yml  python-no-print-statements.yml  python-string-comparison.yml  rust-no-panic.yml  rust-no-unwrap.yml  rust-prefer-generics.yml  rust-unnecessary-mut.yml  rust-unused-var.yml  ts-avoid-any.yml.yml  ts-no-console.yml.yml  ts-unused-interface.yml.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
bandit-results/: bandit-results.json
config/: claude_desktop_config.json  continue_config.json  development.yaml  production.yaml
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  TROUBLESHOOTING.md
docs/plans/: 2026-03-07-public-release-prep-design.md  2026-03-07-public-release-prep-plan.md
rules/: README.md
rules/generic/: complexity-detection.yaml  error-handling-patterns.yaml  find-functions.yaml  find-imports.yaml  find-variables.yaml
rules/language-specific/cpp/: memory-management.yaml  modern-cpp.yaml
rules/language-specific/csharp/: dotnet-patterns.yaml
rules/language-specific/go/: concurrency-patterns.yaml
rules/language-specific/java/: exception-handling.yaml  oop-patterns.yaml
rules/language-specific/javascript/: async-await-patterns.yaml  react-patterns.yaml  typescript-patterns.yaml
rules/language-specific/python/: async-patterns.yaml  django-patterns.yaml  security-patterns.yaml
rules/language-specific/rust/: memory-safety.yaml
rules/use-cases/ai-coding-issues/: README.md  context-loss-patterns.yaml  hallucination-detection.yaml  incomplete-implementation.yaml  security-vulnerabilities.yaml  vibe-coding-antipatterns.yaml
rules/use-cases/llm-assistance/: analysis-boundaries.yaml  context-switching.yaml  locker-mcp-integration.yaml  progress-tracking.yaml
rules/use-cases/refactoring/: dead-code-detection.yaml  extract-method-candidates.yaml  rename-safety-check.yaml
scripts/: analyze_validation_results.py  config_manager.py  release.sh  validate_call_detection.py  validate_call_graph_generation.py  validate_function_detection.py
semgrep-results/: semgrep.sarif
src/: __init__.py
src/ast_grep_mcp/: __init__.py  __main__.py  cache.py  concurrency.py  config.py  config_migration.py  logging_config.py  metrics.py  monitoring.py  performance.py  resources.py  schemas.py  security.py  server.py  streaming.py  tools.py  utils.py
tests/: README_MCP_VALIDATION.md  mcp_validation_results.json  run_all_tests.py  run_mcp_validation_tests.py  test_ast_grep_scan.py  test_ast_grep_search.py  test_audit_logging.py  test_cache.py  test_call_detection.py  test_call_graph_generation.py  test_code.js  test_code.py  test_concurrency.py  test_enhanced_configuration.py  test_function_detection.py  test_language_manager.py  test_logging_config.py  test_mcp.py  test_mcp_client_integration.py  test_mcp_performance.py  test_mcp_protocol.py  test_mcp_protocol_messages.py  test_mcp_resources.py  test_mcp_schema_compliance.py  test_mcp_structured_output.py  test_mcp_tools_registration.py  test_mcp_transport.py  test_metrics.py  test_monitoring.py  test_performance_manager.py  test_pydantic_validation.py  test_rate_limiting.py  test_resource_management.py  test_security.py  test_server.py  test_standalone_validation.py  test_streaming.py  test_validation.py
vibe-coding-rules/: README.md
vibe-coding-rules/claude/: system_prompt.txt
vibe-coding-rules/copilot/: instructions.md
vibe-coding-rules/cursor/: .cursorrules
(+3 files in other folders)
