[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ast-grep-mcp"
version = "1.0.0"
description = "Production-ready MCP Server for AST-Grep with 25+ code quality rules across 5 languages"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AndEnd-Org", email = "contact@andend.org"}
]
maintainers = [
    {name = "AndEnd-Org", email = "contact@andend.org"}
]
keywords = ["ast-grep", "mcp", "code-analysis", "semantic-search", "static-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "aiofiles>=23.0.0",
    "click>=8.0.0",
    "PyYAML>=6.0.0",
    "jsonschema>=4.0.0",
    "psutil>=5.0.0",
    "cryptography>=3.0.0",
    "ast-grep-cli>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
"Homepage" = "https://github.com/AndEnd-Org/ast-mcp"
"Bug Tracker" = "https://github.com/AndEnd-Org/ast-mcp/issues"
"Repository" = "https://github.com/AndEnd-Org/ast-mcp"
"Documentation" = "https://github.com/AndEnd-Org/ast-mcp#readme"

[project.scripts]
ast-grep-mcp = "ast_grep_mcp.server:main_sync"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ast_grep_mcp" = ["*.json", "*.yaml", "*.yml"]

# Black code formatter configuration
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ast_grep_mcp"]
known_third_party = ["mcp", "pydantic", "click", "aiofiles"]

# MyPy type checking configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = [
    "B101",  # Skip assert_used test
    "B404",  # Skip subprocess import warnings - we use subprocess securely
    "B603",  # Skip subprocess warnings - we validate all subprocess calls
    "B601",  # Skip shell=True warnings - we don't use shell=True
    "B110"   # Skip try_except_pass warnings - some are intentional
] 